--- a/plugin/locale/hr/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/hr/LC_MESSAGES/AutoBackup.po
@@ -1,52 +1,49 @@
-# Language hr/LC translations for e package.
-# Copyright (C) 2020 THE e'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the e package.
-# Automatically generated, 2020.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: e 2openplugin-AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-01 15:53+0200\n"
-"PO-Revision-Date: 2020-06-01 15:53+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
-"Language: hr/LC_MESSAGES/AutoBackup\n"
+"PO-Revision-Date: 2020-06-03 19:42+0200\n"
+"Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
+"Language-Team: Željko\n"
+"Language: hr_HR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"X-Generator: Poedit 2.3.1\n"
 
 #: ../plugin.py:129
 msgid "Auto backup"
-msgstr ""
+msgstr "Auto backup"
 
 #: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
-msgstr ""
+msgstr "AutoBackup konfiguracija"
 
 #: ../plugin.py:132
 msgid "Automatic settings backup"
-msgstr ""
+msgstr "Automatske backup postavke"
 
 #: ../ui.py:116
 msgid "Automatic start time"
-msgstr ""
+msgstr "Automatsko vrijeme pokretanja"
 
 #: ../ui.py:194
 msgid "Backup EPG cache"
-msgstr ""
+msgstr "Backup EPG predmemorije"
 
 #: ../ui.py:114
 msgid "Backup location"
-msgstr ""
+msgstr "Backup lokacija"
 
 #: ../ui.py:24 ../ui.py:41
 msgid "CF"
-msgstr ""
+msgstr "CF"
 
 #: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
-msgstr ""
+msgstr "Otkazati"
 
 #: ../ui.py:312
 msgid ""
@@ -54,6 +51,9 @@ msgid ""
 "This will delete autoinstall list.\n"
 "Do you really want to continue?"
 msgstr ""
+"Odaberite backup.\n"
+"To će izbrisati popis za automatsku instalaciju.\n"
+"Želite li zaista nastaviti?"
 
 #: ../ui.py:283
 msgid ""
@@ -61,133 +61,138 @@ msgid ""
 "This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
+"Odaberite backup.\n"
+"To će ponovo instalirati sve dodatke iz backupa.\n"
+"Želite li stvarno ponovo instalirati?"
 
 #: ../ui.py:244
 msgid ""
 "Choose settings backup which should be restored.\n"
 "Do you really want to restore these settings and restart?"
 msgstr ""
+"Odaberite backup postavki koje treba vratiti.\n"
+"Želite li zaista vratiti te postavke i ponovno pokrenuti?"
 
 #: ../ui.py:117
 msgid "Create Autoinstall"
-msgstr ""
+msgstr "Kreiranje automatske instalacije"
 
 #: ../ui.py:115
 msgid "Daily automatic backup"
-msgstr ""
+msgstr "Dnevni automatski backup"
 
 #: ../ui.py:400
 msgid "Deselect"
-msgstr ""
+msgstr "Poništite odabir"
 
 #: ../ui.py:251
 msgid "Do you want to restore your settings?"
-msgstr ""
+msgstr "Želite li vratiti postavke?"
 
 #: ../ui.py:336
 msgid "Done"
-msgstr ""
+msgstr "Gotovo"
 
 #: ../ui.py:118
 msgid "EPG cache backup"
-msgstr ""
+msgstr "Backup EPG predmemorije"
 
 #: ../ui.py:334
 msgid "Failed"
-msgstr ""
+msgstr "Neuspješno"
 
 #: ../ui.py:22 ../ui.py:43
 msgid "Harddisk"
-msgstr ""
+msgstr "Hard disk"
 
 #: ../ui.py:169
 msgid "Last backup date"
-msgstr ""
+msgstr "Zadnji datum backupa"
 
 #: ../ui.py:124
 msgid "Manual"
-msgstr ""
+msgstr "Ručno"
 
 #: ../ui.py:280 ../ui.py:309
 msgid "No autoinstall list found"
-msgstr ""
+msgstr "Nisu pronađene auto instalirane liste"
 
 #: ../ui.py:171 ../ui.py:174
 msgid "No backup present"
-msgstr ""
+msgstr "Nema pronađenog backupa"
 
 #: ../ui.py:241
 msgid "No settings backups found"
-msgstr ""
+msgstr "Nema pronađenih postavki backupa"
 
 #: ../ui.py:162
 msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
+msgstr "Nisu pronađeni odgovarajući mediji, USB stick, flash kartica ili tvrdi disk."
 
 #: ../ui.py:111
 msgid "Nowhere"
-msgstr ""
+msgstr "Nigdje"
 
 #: ../ui.py:123
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../ui.py:125
 msgid "Options/Restore"
-msgstr ""
+msgstr "Opcije/vračanje"
 
 #: ../ui.py:196
 msgid "Remove autoinstall list"
-msgstr ""
+msgstr "Uklonite popis za automatsku instalaciju"
 
 #: ../ui.py:197
 msgid "Restore"
-msgstr ""
+msgstr "Vratiti"
 
 #: ../ui.py:193
 msgid "Run a backup now"
-msgstr ""
+msgstr "Pokrenite sigurnosnu kopiju sada"
 
 #: ../ui.py:195
 msgid "Run autoinstall"
-msgstr ""
+msgstr "Pokrenite auto instalaciju"
 
 #: ../ui.py:222 ../ui.py:261 ../ui.py:290
 msgid "Running..."
-msgstr ""
+msgstr "Pokretanje..."
 
 #: ../ui.py:25
 msgid "SD"
-msgstr ""
+msgstr "SD"
 
 #: ../ui.py:364
 msgid "Save"
-msgstr ""
+msgstr "Spremite"
 
 #: ../ui.py:119
 msgid "Save previous backup"
-msgstr ""
+msgstr "Spremanje prethodnog backupa"
 
 #: ../ui.py:402
 msgid "Select"
-msgstr ""
+msgstr "Odaberite"
 
 #: ../ui.py:192
 msgid "Select files to backup"
-msgstr ""
+msgstr "Odaberite datoteke za backup"
 
 #: ../ui.py:394
 msgid "Select files/folders to backup"
-msgstr ""
+msgstr "Odaberite datoteke/mape za backup"
 
 #: ../ui.py:23
 msgid "USB"
-msgstr ""
+msgstr "USB"
 
 #: ../ui.py:236 ../ui.py:275 ../ui.py:304
 msgid "from: "
-msgstr ""
+msgstr "od: "
 
 #: ../ui.py:38
 msgid "root"
-msgstr ""
+msgstr "root"
