--- a/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
@@ -12,12 +12,12 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 3.0\n"
 
 #
 #: ../plugin.py:137
 msgid "Auto backup"
-msgstr ""
+msgstr "Auto backup"
 
 #
 #: ../ui.py:104 ../ui.py:152
@@ -158,7 +158,7 @@ msgstr "Ok"
 
 #: ../ui.py:424
 msgid "Really close without saving settings?"
-msgstr ""
+msgstr "Opravdu zavřít bez uloženého nastavení?"
 
 #: ../ui.py:205
 msgid "Remove autoinstall list"
